--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150354659-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150354659-1"></script>-->
+<!--    <script>-->
+<!--      window.dataLayer = window.dataLayer || [];-->
+<!--      function gtag(){dataLayer.push(arguments);}-->
+<!--      gtag('js', new Date());-->
 
-      gtag('config', 'UA-150354659-1');
-    </script>
+<!--      gtag('config', 'UA-150354659-1');-->
+<!--    </script>-->
 
     <meta charset="utf-8" />
     <title>Hit that note</title>
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
-  <body id="page-top">
+  <body id="page-top" style="min-width: fit-content">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="wrapper"></div>
   </body>
