--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="songlib.manifest">
   <head>
 <!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150354659-1"></script>-->
 <!--    <script>-->
@@ -9,15 +9,17 @@
 
 <!--      gtag('config', 'UA-150354659-1');-->
 <!--    </script>-->
-
     <meta charset="utf-8" />
     <title>Hit that note</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Mr.Toruabi chordified songs." />
+    <meta name="description" content="Mr.Toruabi songs" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="white" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/favicon.png" />
   </head>
   <body id="page-top" style="min-width: fit-content">
     <noscript>You need to enable JavaScript to run this app.</noscript>
