--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="songlib.manifest">
+<html lang="en">
   <head>
 <!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150354659-1"></script>-->
 <!--    <script>-->
