--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,6 @@
   <body id="page-top" style="min-width: fit-content">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="wrapper"></div>
+    <script src="%PUBLIC_URL%/assets/js/lz-string.js"></script>
   </body>
 </html>
